[gd_scene load_steps=11 format=3 uid="uid://bd2h3xfpvoxrw"]

[ext_resource type="Script" path="res://Scenes/UI/Menu/Options/OptionMenu.gd" id="1_0562g"]
[ext_resource type="Theme" uid="uid://be7rheue60ujx" path="res://Resources/Themes/ui/ui_theme.tres" id="2_hpanq"]
[ext_resource type="Texture2D" uid="uid://b2o8rktuj7a8u" path="res://Resources/Graphics/UI/bitmap_#path27612_1.png" id="3_qkrow"]
[ext_resource type="Texture2D" uid="uid://beqak756ldksg" path="res://Resources/Graphics/UI/bitmap_#path27612_1_pressed.png" id="4_b8ftq"]
[ext_resource type="Texture2D" uid="uid://chd4kq8eeovh4" path="res://Resources/Graphics/UI/Icon_White (9).png" id="5_aepkh"]
[ext_resource type="Texture2D" uid="uid://dn1afboktjqnh" path="res://Resources/Graphics/UI/Icon_White_pressed (9).png" id="6_usfnr"]
[ext_resource type="Texture2D" uid="uid://cx4qc0t6jq76f" path="res://Resources/Graphics/UI/Icon_White_outline (9).png" id="7_22lu7"]
[ext_resource type="Texture2D" uid="uid://dd1oepbtnkyoa" path="res://Resources/Graphics/UI/Icon_White (8).png" id="8_ysvmt"]
[ext_resource type="Texture2D" uid="uid://ctb13cb8o4kuu" path="res://Resources/Graphics/UI/Icon_White_pressed (8).png" id="9_0j5ry"]
[ext_resource type="Texture2D" uid="uid://2gln7cffw6qo" path="res://Resources/Graphics/UI/Icon_White_outline (8).png" id="10_sx2mr"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0562g")

[node name="Back" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
offset_left = 8.2
offset_top = 15.8
offset_right = 35.2
offset_bottom = 47.8
theme = ExtResource("2_hpanq")
texture_normal = ExtResource("3_qkrow")
texture_pressed = ExtResource("4_b8ftq")
texture_hover = ExtResource("4_b8ftq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -302.0
offset_top = -283.0
offset_right = 302.0
offset_bottom = 283.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_hpanq")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Volume" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VolumeLabel" type="Label" parent="PanelContainer/VBoxContainer/Volume"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"HeaderMedium"
text = "Volume"

[node name="VolumeControls" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Volume"]
layout_mode = 2
size_flags_vertical = 3

[node name="VolumeDownBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/Volume/VolumeControls"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("5_aepkh")
texture_pressed = ExtResource("6_usfnr")
texture_hover = ExtResource("7_22lu7")

[node name="Spacer" type="Control" parent="PanelContainer/VBoxContainer/Volume/VolumeControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/Volume/VolumeControls"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 12.0

[node name="Spacer2" type="Control" parent="PanelContainer/VBoxContainer/Volume/VolumeControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeUpBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/Volume/VolumeControls"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("8_ysvmt")
texture_pressed = ExtResource("9_0j5ry")
texture_hover = ExtResource("10_sx2mr")

[node name="Music" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MusicLabel" type="Label" parent="PanelContainer/VBoxContainer/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderMedium"
text = "Music"

[node name="Spacer" type="Control" parent="PanelContainer/VBoxContainer/Music"]
layout_mode = 2
size_flags_horizontal = 3

[node name="toggleMusic" type="CheckButton" parent="PanelContainer/VBoxContainer/Music"]
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"CheckButtonMusic"

[node name="Spacer2" type="Control" parent="PanelContainer/VBoxContainer/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="FullScreen" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FullScreenLabel" type="Label" parent="PanelContainer/VBoxContainer/FullScreen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderMedium"
text = "Full Screen"

[node name="Spacer" type="Control" parent="PanelContainer/VBoxContainer/FullScreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="toggleFullScreen" type="CheckButton" parent="PanelContainer/VBoxContainer/FullScreen"]
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"CheckButtonFullScreen"

[node name="Spacer2" type="Control" parent="PanelContainer/VBoxContainer/FullScreen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Spacer" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Volume/VolumeControls/VolumeDownBtn" to="." method="_on_volume_down_btn_pressed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/Volume/VolumeControls/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Volume/VolumeControls/VolumeUpBtn" to="." method="_on_volume_up_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Music/toggleMusic" to="." method="_on_toggle_music_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/FullScreen/toggleFullScreen" to="." method="_on_toggle_full_screen_pressed"]
